--- a/app/scss/parts/header.scss
+++ b/app/scss/parts/header.scss
@@ -1,10 +1,10 @@
 header {
-  height: 500px;
+  height: 400px;
 }
 
 nav {
   height: 75px;
-  background: transparentize(black, 0.5);
+  background: transparentize(black, 0.2);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,6 +18,15 @@ nav {
 
   .link {
     color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 1px;
     margin: 0 15px;
+    padding-bottom: 2px;
+    border-bottom: 3px solid transparent;
+    transition: 220ms linear;
+    &:hover {
+      border-bottom: 3px solid orange;
+    }
   }
 }
