--- a/app/scss/parts/_header.scss
+++ b/app/scss/parts/_header.scss
@@ -15,7 +15,7 @@ nav {
 
   .logo {
     color: white;
-    // width: 40px;
+    width: 200px;
     // height: 20px;
     // background: white;
     // margin: 0 auto 0 15px;
