--- a/app/scss/parts/_projects.scss
+++ b/app/scss/parts/_projects.scss
@@ -1,3 +1,14 @@
+.block3 {
+  padding: 50px;
+  // color: white;
+  background: #fff;
+  .sectionTitle {
+    text-align: center;
+    font-weight: bold;
+    text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
+    margin-bottom: 30px;
+  }
+}
 .projects {
   display: flex;
   flex-wrap: wrap;
@@ -19,7 +30,7 @@
   }
   &-title {
     padding: 15px 30px;
-    h2 {
+    h3 {
       text-align: center;
       font-weight: bold;
     }
