--- a/app/scss/parts/_block1.scss
+++ b/app/scss/parts/_block1.scss
@@ -4,7 +4,7 @@
   background: #fff;
 
 
-  h1 {
+  h2 {
     text-align: center;
     font-weight: bold;
     text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
@@ -16,10 +16,20 @@
   color: white;
   background: url('../images/block2_bg.jpg');
   background-attachment: scroll;
+  position: relative;
 
-  h1 {
+  // .overlay {
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   background: transparentize(black, 0.2);
+  // }
+
+  h2 {
     text-align: center;
     font-weight: bold;
-    text-shadow: 1px 0 1px #000, 0 1px 1px #000, -1px 0 1px #000, 0 -1px 1px #000;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
   }
 }
