--- a/app/scss/parts/_block1.scss
+++ b/app/scss/parts/_block1.scss
@@ -15,7 +15,7 @@
   padding: 100px 50px;
   color: white;
   background: url('../images/block2_bg.jpg');
-  background-attachment: scroll;
+  background-attachment: fixed;
   position: relative;
 
   // .overlay {
