--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -30,6 +30,7 @@ body {
   max-width: 1200px;
   margin: 25px 0 50px 0;
   // border: 1px solid black;
+  // position: relative;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
