--- a/app/scss/parts/_header.scss
+++ b/app/scss/parts/_header.scss
@@ -13,6 +13,9 @@ nav {
   align-items: center;
   padding: 0 15px;
 
+  position: fixed;
+  top: 25px;
+
   .logo {
     color: white;
     width: 200px;
@@ -49,7 +52,7 @@ nav {
   // width: 100%;
   height: 50px;
   max-width: inherit;
-  background: transparentize(black, 0.05);
+  background: transparentize(black, 0.2);
   z-index: 100;
   transition: 220ms linear;
   .logo {
@@ -89,6 +92,7 @@ nav {
   font-weight: bold;
   text-align: center;
   margin: auto;
+  margin-top: 240px;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
 }
 
