--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -4,7 +4,7 @@
 @import 'fonts';
 //Parts
 @import 'parts/header';
-@import 'parts/block1';
+@import 'parts/profession';
 @import 'parts/projects';
 @import 'parts/gallery';
 @import 'parts/about';
@@ -19,19 +19,20 @@
 body {
   font-family: 'NotoSans';
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  padding: 0 15px;
   // background-image: url('../images/bg.jpg');
   background-color: #e2dce0;
 }
 
-.wrapper {
+section {
+  padding: 0 15px;
+}
+
+.container {
   width: 100%;
-  max-width: 1200px;
-  margin: 25px 0 50px 0;
-  // border: 1px solid black;
-  // position: relative;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  max-width: 1500px;
+  margin: 0 auto;
 }
 
 h1 {
