--- a/app/scss/parts/_header.scss
+++ b/app/scss/parts/_header.scss
@@ -1,20 +1,24 @@
 header {
   display: flex;
   flex-direction: column;
-  height: 670px;
+  height: 600px;
   background: transparentize(black, 0.2);
-  padding-bottom: 30px;
+  padding: 0 0 30px;
 }
 
 nav {
   height: 95px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding: 0 15px;
-
+  width: 100%;
   position: fixed;
-  top: 25px;
+  top: 0;
+
+  .nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+  }
 
   .logo {
     color: white;
@@ -22,15 +26,14 @@ nav {
     // height: 20px;
     // background: white;
     // margin: 0 auto 0 15px;
-    margin: 0 15px;
+    margin-right: 15px;
     svg {
       font-size: 50px;
     }
   }
 
-  .links {
-    // margin: 0 auto 0 15px;
-  }
+
+
   .link {
     color: white;
     text-transform: uppercase;
@@ -64,7 +67,7 @@ nav {
   }
 }
 
-.phone {
+.contact-links {
   display: flex;
   align-items: center;
   a {
@@ -87,6 +90,12 @@ nav {
   }
 }
 
+.menu-bar {
+  color: white;
+  font-size: 25px;
+  display: none;
+}
+
 .headline {
   color: white;
   font-weight: bold;
@@ -96,27 +105,36 @@ nav {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
 }
 
-.advantage {
-  display: flex;
-  justify-content: space-between;
-  padding: 15px 30px;
-
-  &-item {
-    color: white;
-    text-align: center;
-    line-height: 1.2;
-
-    svg {
-      color: orange;
-      font-size: 75px;
-      margin-bottom: 20px;
+@media (max-width: 1023px) {
+  .menu-bar {
+    display: block;
+  }
+  nav {
+    .links {
+      display: none;
     }
-
-    p {
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
+    .links_mobile {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      // top: 50px;
+      left: 0;
+      right: 0;
+      // width: 100%;
+      z-index: 5;
+      align-items: flex-end;
+      padding: 30px 15px;
+      // background-color: gray;
+      background: transparentize(black, 0.2);
+      .link {
+        margin-bottom: 15px;
+        border-bottom: 1px solid orange;
+        letter-spacing: 2px;
+        &:hover {
+          border-bottom: 1px solid orange;
+        }
+      }
     }
   }
-  .fas {
-    font-size: 50px;
-  }
+  /* Стили для устройств с шириной viewport >1200px */
 }
