--- a/app/scss/parts/_profession.scss
+++ b/app/scss/parts/_profession.scss
@@ -1,3 +1,68 @@
+.profession {
+  padding: 100px 15px;
+
+  &-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.profession-text {
+  display: flex;
+  flex-direction: column;
+  // justify-content: center;
+  max-width: 445px;
+  margin-right: 30px;
+
+  h3 {
+    font-weight: bold;
+    line-height: 1.3;
+    margin-bottom: 30px;
+  }
+
+  p {
+    text-align: justify;
+  }
+}
+
+.advantage {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  flex: 1;
+
+  &-item {
+    // color: white;
+    text-align: center;
+    line-height: 1.2;
+    border: 2px solid grey;
+    border-radius: 4px;
+    padding: 15px;
+    width: calc(20% - 0px);
+    min-width: 185px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    // box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+
+    svg {
+      color: orange;
+      font-size: 75px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
+    }
+  }
+  .fas {
+    font-size: 50px;
+  }
+}
+
+
 .block1 {
   padding: 75px 50px;
   // color: white;
