--- a/app/scss/parts/_header.scss
+++ b/app/scss/parts/_header.scss
@@ -22,7 +22,7 @@ nav {
 
   .logo {
     color: white;
-    width: 200px;
+    // width: 200px;
     // height: 20px;
     // background: white;
     // margin: 0 auto 0 15px;
@@ -94,6 +94,9 @@ nav {
   color: white;
   font-size: 25px;
   display: none;
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .headline {
@@ -103,6 +106,10 @@ nav {
   margin: auto;
   margin-top: 240px;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
+}
+
+.nav_open {
+  background: black;
 }
 
 @media (max-width: 1023px) {
@@ -117,15 +124,13 @@ nav {
       display: flex;
       flex-direction: column;
       position: absolute;
-      // top: 50px;
       left: 0;
       right: 0;
-      // width: 100%;
+      height: 100vh;
       z-index: 5;
       align-items: flex-end;
       padding: 30px 15px;
-      // background-color: gray;
-      background: transparentize(black, 0.2);
+      background: black;
       .link {
         margin-bottom: 15px;
         border-bottom: 1px solid orange;
@@ -135,6 +140,8 @@ nav {
         }
       }
     }
+
   }
-  /* Стили для устройств с шириной viewport >1200px */
+
+
 }
