--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,3 +1,6 @@
+$accent: #459e79;
+$font: #292929;
+
 //Plugins
 @import 'service/fotorama';
 @import 'service/magnific-popup';
@@ -14,11 +17,15 @@
 
 // @import 'parts/footer';
 
+
+
+
 * {
   box-sizing: border-box;
 }
 
 body {
+  color: $font;
   font-family: 'NotoSans';
   display: flex;
   flex-direction: column;
@@ -67,7 +74,7 @@ button {
   font-weight: bold;
 }
 .gold {
-  color: orange;
+  color: $accent;
 }
 .hidden {
   display: none;
