--- a/app/scss/parts/_projects.scss
+++ b/app/scss/parts/_projects.scss
@@ -1,7 +1,7 @@
-.block3 {
+.goods {
   padding: 50px;
   // color: white;
-  background: #fff;
+  // background: #fff;
   .sectionTitle {
     text-align: center;
     font-weight: bold;
@@ -19,8 +19,20 @@
   width: calc(50% - 30px);
   padding-bottom: 30px;
   margin: 15px 15px 30px;
-  border-radius: 4px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  border-radius: 5px;
+  border: 3px solid gray;
+  transition: 220ms;
+  // box-shadow: 0 5px 5px rgba(0,0,0,0.30);
+  // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+&:hover {
+  cursor: pointer;
+  border-color: $accent;
+  // box-shadow: 0 5px 5px rgba(0,0,0,0.20);
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  h3 {
+    // color: $accent;
+  }
+}
 
   &-image {
     img {
@@ -53,12 +65,12 @@
     button {
       font-weight: bold;
       font-size: 16px;
-      // border: 2px solid orange;
+      border: 3px solid gray;
       border-radius: 4px;
-      background: orange;
       &:hover {
-        // background: darken(orange, 15%);
-        background: lighten(orange, 15%);
+        // background: darken($accent, 15%);
+        // background: lighten($accent, 5%);
+        border-color: $accent;
         box-shadow: 0 5px 5px rgba(0,0,0,0.20);
       }
     }
