--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -13,8 +13,8 @@ $font: #292929;
 @import 'parts/gallery';
 @import 'parts/about';
 @import 'parts/contacts';
-@import 'parts/popUp';
-
+@import 'parts/callMePopUp';
+@import 'parts/goodsPopUp';
 // @import 'parts/footer';
 
 
@@ -82,4 +82,38 @@ button {
 
 .fotorama__wrap {
   margin: 0 auto;
+}
+
+/* overlay at start */
+.mfp-fade.mfp-bg {
+  opacity: 0;
+
+  -webkit-transition: all 0.15s ease-out;
+  -moz-transition: all 0.15s ease-out;
+  transition: all 0.15s ease-out;
+}
+/* overlay animate in */
+.mfp-fade.mfp-bg.mfp-ready {
+  opacity: 0.8;
+}
+/* overlay animate out */
+.mfp-fade.mfp-bg.mfp-removing {
+  opacity: 0;
+}
+
+/* content at start */
+.mfp-fade.mfp-wrap .mfp-content {
+  opacity: 0;
+
+  -webkit-transition: all 0.25s ease-out;
+  -moz-transition: all 0.25s ease-out;
+  transition: all 0.25s ease-out;
+}
+/* content animate it */
+.mfp-fade.mfp-wrap.mfp-ready .mfp-content {
+  opacity: 1;
+}
+/* content animate out */
+.mfp-fade.mfp-wrap.mfp-removing .mfp-content {
+  opacity: 0;
 }
