--- a/app/scss/parts/_projects.scss
+++ b/app/scss/parts/_projects.scss
@@ -17,16 +17,18 @@
 
 .project {
   width: calc(50% - 30px);
-  padding-bottom: 30px;
+  padding-bottom: 7px;
   margin: 15px 15px 30px;
   border-radius: 5px;
   border: 3px solid gray;
-  transition: 220ms;
+  transition: 260ms;
   // box-shadow: 0 5px 5px rgba(0,0,0,0.30);
   // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 &:hover {
   cursor: pointer;
   border-color: $accent;
+  background: $accent;
+  color: white;
   // box-shadow: 0 5px 5px rgba(0,0,0,0.20);
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   h3 {
