--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -9,6 +9,7 @@ $font: #292929;
 //Parts
 @import 'parts/header';
 @import 'parts/profession';
+@import 'parts/announce';
 @import 'parts/projects';
 @import 'parts/gallery';
 @import 'parts/about';
