--- a/app/scss/parts/_profession.scss
+++ b/app/scss/parts/_profession.scss
@@ -45,7 +45,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
     svg {
       color: $accent;
@@ -57,20 +56,19 @@
       text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
     }
   }
+
   .fas {
     font-size: 50px;
   }
 }
 
-
 .block1 {
   padding: 75px 50px;
   // color: white;
   background: #fff;
-  background-image: url('../images/block1.png');
+  background-image: url("../images/block1.png");
   background-repeat: no-repeat;
   background-position: right -150px bottom -10px;
-
 
   p {
     color: white;
@@ -81,57 +79,86 @@
     word-wrap: break-word;
     letter-spacing: 3px;
     max-width: 640px;
-    text-shadow:
-		-0   -2px 1px #000000,
-		 0   -2px 1px #000000,
-		-0    2px 1px #000000,
-		 0    2px 1px #000000,
-		-2px -0   1px #000000,
-		 2px -0   1px #000000,
-		-2px  0   1px #000000,
-		 2px  0   1px #000000,
-		-1px -2px 1px #000000,
-		 1px -2px 1px #000000,
-		-1px  2px 1px #000000,
-		 1px  2px 1px #000000,
-		-2px -1px 1px #000000,
-		 2px -1px 1px #000000,
-		-2px  1px 1px #000000,
-		 2px  1px 1px #000000,
-		-2px -2px 1px #000000,
-		 2px -2px 1px #000000,
-		-2px  2px 1px #000000,
-		 2px  2px 1px #000000,
-		-2px -2px 1px #000000,
-		 2px -2px 1px #000000,
-		-2px  2px 1px #000000,
-		 2px  2px 1px #000000;
+    text-shadow: -0 -2px 1px #000000, 0 -2px 1px #000000, -0 2px 1px #000000, 0 2px 1px #000000, -2px -0 1px #000000, 2px -0 1px #000000, -2px 0 1px #000000, 2px 0 1px #000000, -1px -2px 1px #000000, 1px -2px 1px #000000, -1px 2px 1px #000000, 1px 2px 1px #000000, -2px -1px 1px #000000, 2px -1px 1px #000000, -2px 1px 1px #000000, 2px 1px 1px #000000, -2px -2px 1px #000000, 2px -2px 1px #000000, -2px 2px 1px #000000, 2px 2px 1px #000000, -2px -2px 1px #000000, 2px -2px 1px #000000, -2px 2px 1px #000000, 2px 2px 1px #000000;
   }
 }
+//Media//-------------------------------------------------
+@media (max-width: 1279px) {
+  .profession {
+    padding: 75px 15px;
+  }
 
-.block2 {
-  font-family: 'Play';
-  padding: 100px 50px;
-  color: white;
-  background: url('../images/block2_bg.jpg');
-  background-attachment: fixed;
-  position: relative;
+  .advantage {
+    margin-bottom: -25px;
 
-  // .overlay {
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   width: 100%;
-  //   height: 100%;
-  //   background: transparentize(black, 0.2);
-  // }
+    &-item {
+      width: 48%;
+      margin-bottom: 25px;
+    }
+  }
+}
+@media (max-width: 1023px) {
+  .profession {
+    padding: 50px 15px;
+  }
 
-  h2 {
-    // color: $accent;
-    text-align: center;
-    font-weight: bold;
-    line-height: 1.5;
-    // text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
-    text-shadow: 4px 4px 4px #000000;
+  .profession-container {
+    flex-direction: column;
+  }
+
+  .profession-text {
+    // text-align: justify;
+    max-width: 100%;
+    margin: 0 0 25px;
+
+    h3 {
+      text-align: center;
+    }
+  }
+
+  .advantage {
+    &-item {
+      width: 23%;
+      margin-bottom: 25px;
+    }
+  }
+}
+@media (max-width: 799px) {
+  .profession-container {}
+
+  .profession-text {}
+
+  .advantage {
+    &-item {
+      width: 48%;
+      min-width: 100px;
+      margin-bottom: 25px;
+    }
+  }
+}
+@media (max-width: 450px) {
+  .profession {
+    padding: 30px 15px;
+  }
+
+  .advantage {
+    margin-bottom: -15px;
+
+    &-item {
+      margin-bottom: 15px;
+    }
+  }
+}
+@media (max-width: 410px) {
+  .profession {}
+
+  .advantage {
+    justify-content: space-between;
+    margin-bottom: -15px;
+
+    &-item {
+      // width: 90%;
+      margin-bottom: 15px;
+    }
   }
 }
