--- a/app/scss/parts/_announce.scss
+++ b/app/scss/parts/_announce.scss
@@ -14,7 +14,7 @@
   }
 }
 
-//Media//-------------------------------------------------
+//@media//-------------------------------------------------
 
 @media (max-width: 1023px) {
   .announce {
