--- a/app/scss/parts/_header.scss
+++ b/app/scss/parts/_header.scss
@@ -112,6 +112,8 @@ nav {
   background: black;
 }
 
+
+//@media//-------------------------------------------------
 @media (max-width: 1023px) {
   .menu-bar {
     display: block;
