--- a/app/scss/parts/_contacts.scss
+++ b/app/scss/parts/_contacts.scss
@@ -92,3 +92,38 @@
     }
   }
 }
+
+//@media//-------------------------------------------------
+@media (max-width: 500px) {
+  .contacts {
+    padding: 25px 15px;
+
+    .sectionTitle {
+      font-size: 35px;
+    }
+  }
+  .contacts-wrapper {
+    flex-direction: column;
+  }
+  .contacts-links {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+  .contacts-item {
+    margin-bottom: 25px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+    svg {
+      font-size: 25px;
+      margin-right: 30px;
+    }
+    a, span {
+      font-size: 16px;
+      line-height: 2;
+    }
+  }
+  .message {
+    width: 100%;
+  }
+}
