--- a/app/scss/parts/_about.scss
+++ b/app/scss/parts/_about.scss
@@ -18,18 +18,35 @@
     margin-bottom: 30px;
   }
 
-  p {
+  p, li {
     font-size: 20px;
     max-width: 1000px;
-    text-align: center;
+    text-align: right;
     line-height: 1.5;
   }
+  li {
+    text-align: left;
+    padding-left: 5px;
+    margin-bottom: 10px;
+    font-size: 18px;
+  }
+  .scheme {
+    font-size: 25px;
+    font-weight: bold;
+    text-align: left;
+    margin-top: 30px;
+    margin-bottom: 10px;
+  }
 }
+
 
 //@media//-------------------------------------------------
 @media (max-width: 500px) {
   .about {
     padding: 25px 15px;
+    .container {
+      background-position: right -15px bottom 600px;
+    }
     .sectionTitle {
       font-size: 35px;
       margin-bottom: 15px;
