--- a/app/scss/parts/_about.scss
+++ b/app/scss/parts/_about.scss
@@ -21,7 +21,7 @@
   p, li {
     font-size: 20px;
     max-width: 1000px;
-    text-align: right;
+    text-align: justify;
     line-height: 1.5;
   }
   li {
