--- a/app/scss/parts/_profession.scss
+++ b/app/scss/parts/_profession.scss
@@ -3,7 +3,7 @@
 
   &-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
   }
 }
@@ -12,8 +12,9 @@
   display: flex;
   flex-direction: column;
   // justify-content: center;
-  max-width: 445px;
-  margin-right: 30px;
+  // max-width: 445px;
+  // margin-right: 30px;
+  margin-bottom: 50px;
 
   h3 {
     font-weight: bold;
@@ -23,6 +24,8 @@
 
   p {
     text-align: justify;
+    line-height: 1.5;
+    font-size: 19px;
   }
 }
 
@@ -38,22 +41,25 @@
     line-height: 1.2;
     border: 3px solid grey;
     border-radius: 4px;
-    padding: 15px;
+    padding: 80px 30px;
     width: calc(20% - 0px);
     min-width: 185px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 36px 0px, rgba(0, 0, 0, 0.1) 0px 0px 0px 1px;
 
     svg {
       color: $accent;
       font-size: 75px;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
+      filter: drop-shadow( 0px 1px 1px black );
     }
 
     p {
-      text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
+      font-family: 'Play';
+      // text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
     }
   }
 
