--- a/app/scss/parts/_goodsPopUp.scss
+++ b/app/scss/parts/_goodsPopUp.scss
@@ -127,3 +127,25 @@
     }
   }
 }
+
+//@media//-------------------------------------------------
+@media (max-width: 850px) {
+  .goodsPopUp {
+    .flex {
+      flex-direction: column;
+    }
+    &__cover {
+      border-right: none;
+      padding-right: 0;
+      width: 100%;
+      margin-bottom: 20px;
+    }
+    &__info {
+      width: 100%;
+      padding-left: 0;
+    }
+    .requestForm__title {
+      text-align: center;
+    }
+  }
+}
