--- a/app/scss/parts/_header.scss
+++ b/app/scss/parts/_header.scss
@@ -1,7 +1,7 @@
 header {
   display: flex;
   flex-direction: column;
-  height: 600px;
+  height: 700px;
   background: transparentize(black, 0.2);
   padding: 0 0 30px;
 }
@@ -111,6 +111,7 @@ nav {
   color: white;
   font-weight: bold;
   text-align: center;
+  line-height: 1.5;
   margin: auto;
   margin-top: 240px;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
@@ -160,12 +161,27 @@ nav {
         }
       }
     }
-  }
-}
-@media (max-width: 1023px) {
-  nav {
     .logo {
       max-width: 130px;
     }
+  }
+}
+@media (max-width: 961px) {
+  .headline {
+    font-size: 40px;
+  }
+}
+@media (max-width: 769px) {
+  .headline {
+    font-size: 30px;
+  }
+}
+@media (max-width: 450px) {
+  header {
+    height: 450px;
+  }
+  .headline {
+    font-size: 25px;
+    margin-top: 190px;
   }
 }
