--- a/app/scss/parts/_profession.scss
+++ b/app/scss/parts/_profession.scss
@@ -98,8 +98,8 @@
     margin-bottom: -25px;
 
     &-item {
-      width: 48%;
-      margin-bottom: 25px;
+      width: 23%;
+      // margin-bottom: 50px;
     }
   }
 }
@@ -129,6 +129,13 @@
     }
   }
 }
+@media (max-width: 964px) {
+  .advantage {
+    &-item {
+      padding: 30px 15px;
+    }
+  }
+}
 @media (max-width: 799px) {
   .profession-container {}
 
@@ -138,7 +145,9 @@
     &-item {
       width: 48%;
       min-width: 100px;
-      margin-bottom: 25px;
+      margin-bottom: 30px;
+      box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px 0px,
+      rgba(0, 0, 0, 0.1) 0px 0px 0px 1px;
     }
   }
 }
@@ -148,10 +157,11 @@
   }
 
   .advantage {
-    margin-bottom: -15px;
+    // margin-bottom: -15px;
 
     &-item {
       margin-bottom: 15px;
+      box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 5px 0px;
     }
   }
 }
@@ -159,12 +169,12 @@
   .profession {}
 
   .advantage {
-    justify-content: space-between;
-    margin-bottom: -15px;
+    justify-content: center;
+    // margin-bottom: -15px;
 
     &-item {
-      // width: 90%;
-      margin-bottom: 15px;
+      width: 90%;
+      margin-bottom: 25px;
     }
   }
 }
