--- a/app/scss/parts/_projects.scss
+++ b/app/scss/parts/_projects.scss
@@ -21,7 +21,8 @@
   margin: 15px;
   border-radius: 5px;
   border: 3px solid gray;
-  transition: 260ms;
+  transition: 300ms;
+  // background-color: white;
   // box-shadow: 0 5px 5px rgba(0,0,0,0.30);
   // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 &:hover {
